Refactoring: moved all image processing to separate imageProcessing class

--- a/vanish/vanish.vcxproj.filters
+++ b/vanish/vanish.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="vanish.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pixelBucket.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="imageProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="pixelBucket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imageProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
