--- a/vanish/vanish.vcxproj
+++ b/vanish/vanish.vcxproj
@@ -117,7 +117,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="imageProcessor.cpp" />
+    <ClCompile Include="pixelBucket.cpp" />
     <ClCompile Include="vanish.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="imageProcessor.h" />
+    <ClInclude Include="pixelBucket.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
