--- a/vanish/vanish.vcxproj
+++ b/vanish/vanish.vcxproj
@@ -69,12 +69,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>D:\code\_packages\boost_1_63_0;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\code\_packages\boost_1_63_0\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\docs\code\_packages\boost_1_63_0;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\docs\code\_packages\boost_1_63_0\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>D:\code\_packages\boost_1_63_0;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\code\_packages\boost_1_63_0\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\docs\code\_packages\boost_1_63_0;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\docs\code\_packages\boost_1_63_0\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>D:\code\_packages\boost_1_63_0;$(IncludePath)</IncludePath>
