--- a/vanish/Makefile
+++ b/vanish/Makefile
@@ -1,16 +1,16 @@
 # Linux makefile for vanish
 
-vanish: imageProcessor.o vanish.o
-	g++ -std=c++11 -o vanish imageProcessor.o vanish.o -lstdc++ -lm -lpthread -lX11 -lboost_system -lboost_filesystem -lboost_program_options
+vanish: image_processor.o vanish.o
+	g++ -std=c++11 -o vanish image_processor.o vanish.o -lstdc++ -lm -lpthread -lX11 -lboost_system -lboost_filesystem -lboost_program_options
 
-imageProcessor.o: imageProcessor.cpp imageProcessor.h
-	g++ -std=c++11 -c imageProcessor.cpp
+image_processor.o: image_processor.cpp image_processor.h image_processor_interface.h
+	g++ -std=c++11 -c image_processor.cpp
 
 vanish.o: vanish.cpp
 	g++ -std=c++11 -c vanish.cpp
 
 clean:
-	rm vanish imageProcessor.o vanish.o
+	rm vanish image_processor.o vanish.o
 
 # all:
 #		g++ -std=c++11 bucketData.cpp imageProcessor.cpp vanish.cpp -lstdc++ -lm -lpthread -lX11 -lboost_system -lboost_filesystem -lboost_program_options -o vanish
